--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <main>
-    <header>
+    <header class="container">
         menu
     </header>
     <section id="block-1" class="relative">
@@ -22,25 +22,72 @@
         </div>
         <span class="linha-reta"></span>
     </section>
-    <section id="block-2">
+
+    <section id="block-2" class="container">
         <h1>How to get started?</h1>
         <div class="grid">
+            <div>
+                <img src="./assets/images/solucao-1-teste-programador.png" alt="imagem driveon">
+                <div class="text">
+                    <h2>Create your account</h2>
+                    <p>Complete your account with some basic information including your home your work location and your working hours.</p>
+                </div>
+            </div>
 
+            <div>
+                <img src="./assets/images/solucao-2-teste-programador.png" alt="imagem driveon">
+                <div class="text">
+                    <h2>Plan your journeys</h2>
+                    <p>Open the app, </br> click the agenda tab</br> and enter your working hours for the coming wekk. Then you´ll be presented with a list of our drivers.</p>
+                </div>
+            </div>
+
+            <div>
+                <img src="./assets/images/solucao-3-teste-programador.png" alt="imagem driveon">
+                <div class="text">
+                    <h2>Meet your driver</h2>
+                    <p>Use our chat to get to know your match with our driver. you´ll be picked up at your regular location, or agree on an alternative pick-up location.</p>
+                </div>
+            </div>
+
+            <div>
+                <img src="./assets/images/solucao-4-teste-programador.png" alt="imagem driveon">
+                <div class="text">
+                    <h2>Enjoy your journey</h2>
+                    <p>Get in, sit back and enjoy your journey tha takes you directly to your destination with some free cup of coffee from us</p>
+                </div>
+            </div>
         </div>
     </section>
-    <section id="block-3">
-        <div>
-        <span class="linha-reta">
-        </span>
-        text
+    <section id="block-3" >
+        <div class="flex">
+            <img src="./assets/images/img-fundo-teste-programador.png" alt="imagem driveon">
+
+            <div class="content">
+                <span class="linha-reta"></span>
+                <div class="text">
+                    <p>DriveOn is a mobile carpool platform that effortlessly brings commuters together in one car.</br>
+                    Traveling home and work will never be the same again.</br>Our mission is to stop traffic jams and CO2 pollution as a result of inefficient car commuting</p>
+                    <p>Are you in?</p>
+                    
+                    <p class="hidden">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Id consectetur molestiae, obcaecati placeat dolores eligendi sed sunt incidunt rem eos earum aperiam adipisci deleniti ullam odit optio ex excepturi. Quos!</p>
+                    <button>Learn More <span>>></span></button>
+                </div>
+            </div>
         </div>
     </section>
-    <section id="block-4">
-        <div>
-            <span class="linha-reta"></span>
-            <h1>Our commitment to your safety</h1>
+    <section id="block-4" class="relative">
+        <div class="flex">
+            <div class="content">
+                <span class="linha-reta"></span>
+                <h1>Our commitment to your safety</h1>
+
+                <p>With every safety feature we add</br>
+                and every standard in the Community Guide that we uphold, we are committed to protecting you throughout the journey. Learn more about our community Guide  <span class="relative"><a href="#">here</a> <span class="linha-reta"></span></span>
+                </p>
+            </div>
+            <img src="./assets/images/img-fundo-2-teste-programador.png" alt="imagem driveon">
         </div>
-        
     </section>
     <section id="block-5">
         <div>
