--- a/index.html
+++ b/index.html
@@ -85,17 +85,69 @@
                 <p>With every safety feature we add</br>
                 and every standard in the Community Guide that we uphold, we are committed to protecting you throughout the journey. Learn more about our community Guide  <span class="relative"><a href="#">here</a> <span class="linha-reta"></span></span>
                 </p>
+
+                <a href="#">See all safety features <span>>></span></a>
             </div>
             <img src="./assets/images/img-fundo-2-teste-programador.png" alt="imagem driveon">
         </div>
     </section>
-    <section id="block-5">
-        <div>
-            <span class="linha-reta"></span>
+    <section id="block-5" class="relative">
+        <img src="./assets/images/img-fundo-4-teste-programador.png" alt="imagem driveon">
+            <div class="content">
+                <span class="linha-reta"></span>
+                <h1>Download the DriveOn application to get more benefits and experience</h1>
+                <div class="download">
+                    <a href="#">
+                        <svg class="android" version="1.0" xmlns="http://www.w3.org/2000/svg"
+                                viewBox="0 0 1280.000000 1130.000000"
+                                preserveAspectRatio="xMidYMid meet">
+                                <g transform="translate(0.000000,1130.000000) scale(0.100000,-0.100000)"
+                                fill="#65be67" stroke="none">
+                                <path d="M6212 11214 c-18 -17 -350 -580 -800 -1359 -716 -1239 -931 -1610
+                                -1862 -3220 -194 -335 -617 -1067 -940 -1625 -323 -558 -746 -1289 -940 -1625
+                                -1291 -2232 -1576 -2724 -1597 -2760 -30 -53 -30 -106 1 -142 l24 -28 6167 -3
+                                6166 -2 31 30 c26 26 29 37 26 73 -3 34 -173 336 -949 1677 -521 899 -1893
+                                3271 -3049 5270 -1157 1999 -2113 3651 -2125 3670 -30 47 -47 60 -88 67 -28 4
+                                -40 0 -65 -23z"/>
+                                </g>
+                            </svg>
+                        <p>GET IT ON </br> <span>Clay Store</span></p>
+                            
+                    </a>
+                    <a href="#">
+                        <svg class="ios" xmlns="http://www.w3.org/2000/svg"  viewBox="0 0 64 64" fill="white"><path d="M54.166,19.783c-0.258,0.162-6.401,3.571-6.401,11.13c0.29,8.621,7.752,11.644,7.88,11.644	c-0.128,0.162-1.127,4.119-4.085,8.267C49.213,54.398,46.607,58,42.65,58c-3.764,0-5.115-2.381-9.458-2.381	c-4.664,0-5.984,2.381-9.555,2.381c-3.957,0-6.756-3.795-9.232-7.335c-3.216-4.633-5.95-11.903-6.047-18.883	c-0.065-3.699,0.644-7.335,2.444-10.423c2.541-4.312,7.077-7.238,12.031-7.335c3.795-0.128,7.173,2.606,9.49,2.606	c2.22,0,6.37-2.606,11.065-2.606C45.415,14.026,50.82,14.636,54.166,19.783z M32.002,13.285c-0.676-3.378,1.19-6.756,2.927-8.911	C37.149,1.769,40.655,0,43.678,0c0.193,3.378-1.03,6.691-3.216,9.104C38.5,11.71,35.122,13.671,32.002,13.285z"/></svg>
+                        <p>Download on the </br> <span>Play APP</span></p>
+                    </a>
+
+            </div>
             
         </div>
     </section>
-    <footer></footer>
+    <section id="block-6">
+        <div class="content">
+            <div>
+                <div class="flex">
+                    <p>Register to be a driver a partner</p>
+                    <img src="./assets/images/setas-teste-programador.png" alt="vector driveon">
+                </div>
+                <span class="linha-reta"></span>
+            </div>
+            <div>
+                <div class="flex">
+                    <p>Register to start your journey</p>
+                    <img src="./assets/images/setas-teste-programador.png" alt="vector driveon">
+                </div>
+                <span class="linha-reta"></span>
+            </div>
+        </div>
+    </section>
+    <footer>
+        <div>
+            <img src="./assets/images/logo_drive_on-removebg-preview.png" alt="logo DriveOn">
+            <div><p>Resolution Center</p></div>
+            <div><p>English</p></div>
+        </div>
+    </footer>
 </main>
 </body>
 </html>
