--- a/index.html
+++ b/index.html
@@ -5,10 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="./assets/css/styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css">
 </head>
 <body>
 <main>
     <header class="container flex">
+        <div class="desk">
         <div class="menu-desk flex">
             <img src="./assets/images/logo-teste-programador.png" alt="logo DrivenOn">
             <a href="#">Drivers</a>
@@ -20,6 +23,40 @@
             <a href="#" class="flex"><img src="./assets/images/icone-login-teste-programador.png" alt="login"><p>Log in</p></a>
             <a href="#" class="register">Sign up</a>
         </div>
+</div>
+    <div class="mobile">
+        <div class="flex"><img src="./assets/images/logo-teste-programador.png" alt="logo DrivenOn">
+            <button onclick="handleClickMenu()">
+                <svg width="50px" height="50px" viewBox="0 0 72 72" id="emoji" xmlns="http://www.w3.org/2000/svg">
+                    <g id="color"/>
+                    <g id="hair"/>
+                    <g id="skin"/>
+                    <g id="skin-shadow"/>
+                    <g id="line">
+                      <line x1="16" x2="56" y1="26" y2="26" fill="none" stroke="##593293" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10" stroke-width="2"/>
+                      <line x1="16" x2="56" y1="36" y2="36" fill="none" stroke="#593293" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10" stroke-width="2"/>
+                      <line x1="16" x2="56" y1="46" y2="46" fill="none" stroke="#593293" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10" stroke-width="2"/>
+                    </g>
+                  </svg>
+            </button>
+            
+    </div>
+    <div class="menu relative">
+        <a href="#">Drivers</a>
+        <a href="#">Passengers</a>
+        <a href="#">About Us</a>
+        <a href="#">Contact</a>
+    
+    <div class="login">
+        <a href="#" ><img src="./assets/images/icone-login-teste-programador.png" alt="login"><p>Log in</p></a>
+        <a href="#" class="register">Sign up</a>
+    </div>
+    <button onclick="handleClickMenu()" class="close"><svg width="30px" height="30px" viewBox="-0.5 0 25 25" fill="none" xmlns="http://www.w3.org/2000/svg">
+        <path d="M3 21.32L21 3.32001" stroke="#593293" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+        <path d="M3 3.32001L21 21.32" stroke="#593293" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+        </svg></button>
+    </div>
+    </div>
     </header>
     <section id="block-1" class="relative">
         <div class="flex">
@@ -35,7 +72,7 @@
 
     <section id="block-2" class="container">
         <h1>How to get started?</h1>
-        <div class="grid">
+        <div id="carousel1" class="grid">
             <div>
                 <img src="./assets/images/solucao-1-teste-programador.png" alt="imagem driveon">
                 <div class="text">
@@ -251,4 +288,8 @@
     </footer>
 </main>
 </body>
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js">   </script>
+<script src="./assets/js/script.js"></script>
+
 </html>
